--- a/views/_reservation_activity_tickets_order.erb
+++ b/views/_reservation_activity_tickets_order.erb
@@ -1,4 +1,4 @@
-              <h4><%=t.activity.tickets%></h3>
+              <h4><%=t.activity.tickets%></h4>
               <% rates = @activity.rates_hash(@date) %>
               <div id="tickets" class="top-margin">
                 <% unless @activity.price_definition_1.nil? %>
@@ -6,7 +6,7 @@
                   <select name="quantity_rate_1" id="quantity_rate_1" class="quantity_rate" style="width:99%">
                     <option value="0" data-total="0"><%=t.activity.choose_tickets(@activity.price_1_description)%></option>
                     <% (1..[10 - @order.item_quantity(@activity.code, 1), @occupation[:occupation_capacity] - ((@occupation[:occupation_detail][1].to_i) || 0)].min).each do |quantity| %>
-                      <option value="<%=quantity%>" data-total="<%="%.2f" % rates[1][quantity]%>"><%="#{quantity} X #{@activity.price_1_description} #{"%.2f" % rates[1][quantity]}€"%></option>
+                      <option value="<%=quantity%>" data-total="<%="%.2f" % (rates[1][quantity] || 0)%>"><%="#{quantity} X #{@activity.price_1_description} #{"%.2f" % (rates[1][quantity]||0)}€"%></option>
                     <% end %>
                   </select>
                 </div>
@@ -16,7 +16,7 @@
                   <select name="quantity_rate_2" id="quantity_rate_2" class="quantity_rate" style="width:99%">
                     <option value="0" data-total="0"><%=t.activity.choose_tickets(@activity.price_2_description)%></option>
                     <% (1..[10 - @order.item_quantity(@activity.code, 2), @occupation[:occupation_capacity] - ((@occupation[:occupation_detail][2].to_i) || 0)].min).each do |quantity| %>
-                      <option value="<%=quantity%>" data-total="<%="%.2f" % rates[2][quantity]%>"><%="#{quantity} X #{@activity.price_2_description} #{"%.2f" % rates[2][quantity]}€"%></option>
+                      <option value="<%=quantity%>" data-total="<%="%.2f" % (rates[2][quantity] || 0)%>"><%="#{quantity} X #{@activity.price_2_description} #{"%.2f" % (rates[2][quantity]||0)}€"%></option>
                     <% end %>                    
                   </select>
                 </div>
@@ -26,9 +26,12 @@
                   <select name="quantity_rate_3" id="quantity_rate_3" class="quantity_rate" style="width:99%">
                     <option value="0" data-total="0"><%=t.activity.choose_tickets(@activity.price_3_description)%></option>
                     <% (1..[10 - @order.item_quantity(@activity.code, 3), @occupation[:occupation_capacity] - ((@occupation[:occupation_detail][3].to_i) || 0)].min).each do |quantity| %>
-                      <option value="<%=quantity%>" data-total="<%="%.2f" % rates[3][quantity]%>"><%="#{quantity} X #{@activity.price_3_description} #{"%.2f" % rates[3][quantity]}€"%></option>
+                      <option value="<%=quantity%>" data-total="<%="%.2f" % (rates[3][quantity] || 0)%>"><%="#{quantity} X #{@activity.price_3_description} #{"%.2f" % (rates[3][quantity]||0)}€"%></option>
                     <% end %>                    
                   </select>	
                 </div>
+                <% end %>
+                <% if request.path.starts_with?('/admin') %>
+                <p class="smaller_text less_contrast_text">Plazas reservadas: <%= @occupation[:total_occupation].to_i%> de <%= @occupation[:occupation_capacity] %></p>
                 <% end %>
              </div>
