--- a/views/reservation_activity.erb
+++ b/views/reservation_activity.erb
@@ -7,14 +7,14 @@
   </div>
 </div>
 <div class="container_12">
-  <div class="grid_8" style="background-color: white">
-    <div>
+  <div class="grid_8">
+    <div id="activity_content" class="all-space">
       <% if @activity.photo_url_full.nil? or @activity.photo_url_full.empty?%> 
          <div>
             <span class="centered_text" style="font-size:25em; display: block" data-icon="&#xe072;"></span> 
          </div> 
       <% else  %>
-         <img id="activity_image" src="<%= @activity.photo_url_full %>" class="box-shadow element-row-selector" style="display:block; margin: 0 auto" rel="<%%= index %>"/>
+         <img id="activity_image" src="<%= @activity.photo_url_full %>" class="box-shadow element-row-selector" style="display:block; margin: 0 auto; width: 100%" rel="<%%= index %>"/>
       <% end %>
     </div>  
     <div class="top-margin-1line bottom-margin-2lines">
