--- a/views/_booking_menu.erb
+++ b/views/_booking_menu.erb
@@ -41,6 +41,7 @@
                     '/admin/booking/planning2',
                     '/admin/booking/monthly-occupation',
                     '/admin/booking/reports/pickup-return',
+                    '/admin/booking/journal',
                     '/admin/booking/reports/pending-confirmation',
                     '/admin/booking/reports/in-progress',
                     '/admin/booking/resources-occupation',
@@ -54,7 +55,10 @@
         <li><a href='/admin/booking/resources-occupation'><%=t.booking_console.check_availability%></a></li>  
         <li style="border-top: 1px dotted; border-color: #EEE"><a href='/admin/booking/reports/pending-confirmation'><%=t.booking_console.report_pending_confirmation%><%if pending_confirmation>0%><span style="background: red; padding: 2px 7px; border-radius: 50%; position: relative; top: -13px; left: -4px; color: white; text-decoration: none; font-size: 0.7em"><%=pending_confirmation%></span><%end%></a></li>
         <li><a href='/admin/booking/reports/pickup-return'><%=t.booking_console.report_pickup_return%><%if today_pickup>0 || today_return>0%><span style="background: red; padding: 2px 7px; border-radius: 50%; position: relative; top: -13px; left: -4px; color: white; text-decoration: none; font-size: 0.7em"><%=today_pickup%>/<%=today_return%></span><%end%></a></li>
-        <li><a href='/admin/booking/reports/in-progress'><%=t.booking_console.report_in_progress%></a></li>        
+        <% if addon_journal %>
+            <li><a href='/admin/booking/journal'><%=t.booking_console.journal%></a></li>
+        <% end %>
+        <li><a href='/admin/booking/reports/in-progress'><%=t.booking_console.report_in_progress%></a></li>
       </ul>    
    </li>   
    <% end %>
