--- a/views/booking_categories_management.erb
+++ b/views/booking_categories_management.erb
@@ -195,27 +195,33 @@
         </div>
         <div id="stocks_tab" class="top-margin bottom-margin">
           <div class="container_12">
-          <div class="grid_6">        
-          <form name="element" method="POST">    
-              <%% if (entity) { %>
-              <input type="hidden" name="code" value="<%%=entity.code%>"/>
-              <%% } %>              
-              <div id="stock_container" class="formrow">
-                <label class="fieldtitle"><%= t.booking_category_management.form.stock.label%></label>
-                <input type="text" class="fieldcontrol" name="stock" id="stock" <%% if (entity){%>value="<%%=entity.stock%>" <%%}%>/>
-              </div>              
-              <div class="formrow">
-                <label class="fieldtitle"><%= t.booking_category_management.form.stock_control.label%></label>
-                <input type="checkbox" name="stock_control" value="true" id="stock_control" <%% if (entity && entity.stock_control) { %>checked="checked"<%%}%>/>
-              </div>                         
-              <div class="bottom-navigation-bar navigation-bar" style="padding-right:0px">
-                <div class="navigation-bar-crud-buttons">
-                  <input type="button" class="update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
+            <div class="grid_6">
+              <form name="element" method="POST">
+                <%% if (entity) { %>
+                <input type="hidden" name="code" value="<%%=entity.code%>"/>
+                <%% } %>
+                <div id="stock_container" class="formrow">
+                  <label class="fieldtitle"><%= t.booking_category_management.form.stock.label%></label>
+                  <input type="text" class="fieldcontrol" name="stock" id="stock" <%% if (entity){%>value="<%%=entity.stock%>" <%%}%>/>
                 </div>
-              </div>                
-          </form>
+                <div class="formrow">
+                  <label class="fieldtitle"><%= t.booking_category_management.form.stock_control.label%></label>
+                  <input type="checkbox" name="stock_control" value="true" id="stock_control" <%% if (entity && entity.stock_control) { %>checked="checked"<%%}%>/>
+                </div>
+                <div class="bottom-navigation-bar navigation-bar" style="padding-right:0px">
+                  <div class="navigation-bar-crud-buttons">
+                    <input type="button" class="update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
+                  </div>
+                </div>
+              </form>
+            </div>
           </div>
-          </div>        
+          <div class="container_12">
+            <div class="grid_12">
+              <div id="stock_detail_container" class="smaller_text">
+              </div>
+            </div>
+          </div>       
         </div>
         <div id="prices_tab" class="top-margin bottom-margin">
           <%% if (entity.price_definition_id == null) { %>
