--- a/views/booking_categories_management.js.erb
+++ b/views/booking_categories_management.js.erb
@@ -25,6 +25,13 @@ require(["jquery", "YSDEntityManagement", "YSDEntityManagementComplementHooks",
         $('head').append(dom.find('script:not([src])'));
       });
 
+      // Embed stock
+      $.ajax({url: '/admin/booking/stock/'+ entity.code, dataType: 'text'}).done(function(html) {
+        var dom = $('<html />').prop('innerHTML', html);
+        $('#stock_detail_container').html(dom.find('body #page_wrapper'));
+        $('head').append(dom.find('script:not([src])'));
+      });
+
       // Embed translations
       <% if @show_translations %>
       $.ajax({url: '/admin/booking/translate/category/'+ entity.code, dataType: 'text'}).done(function(html) {
