--- a/views/resources_occupation.erb
+++ b/views/resources_occupation.erb
@@ -60,23 +60,47 @@
     </table>
 
     <h3 class="highlight_block">Stock disponible</h3>
-    <% @detail.each do |product, value| %>
-      <% unless value[:available_stock].empty? %>
-        <h4 class="bottom-border-solid"><%=product%></h4>
-        <div class="container_12">
-          <% value[:available_stock].each do |v| %>
-          <div class="grid_3">
-            <div class="guiblock"><%if value[:automatically_preassigned_stock].include?(v)%><em></rm><%=v%>*</em><%else%><b><%=v%></b><%end%></div>
-          </div> 
-          <% end %>
-        </div>
-        <%if value[:assignation_pending].size > 0%>
-          <div class="all-space all-border-dashed"><strong><%=value[:assignation_pending].size%></strong> pendiente de asignar</div>
-        <%end%>
+
+    <% if (@detail.select {|k,v| !v[:available_stock].empty?}).size == 0%>
+      <div class="guiblock smaller_txt">
+        <ul>
+          <li>No hay stock disponible</li>
+        </ul>
+      </div>
+    <% else %>
+      <% @detail.each do |product, value| %>
+        <% unless value[:available_stock].empty? %>
+          <h4 class="bottom-border-solid"><%=product%></h4>
+          <div class="container_12">
+            <% value[:available_stock].each do |v| %>
+            <div class="grid_3">
+              <div class="guiblock" <%unless @data[v][:assignable]%>style="color: #aaaaaa"<%end%>>
+                  <%if value[:automatically_preassigned_stock].include?(v)%><em></rm><%=v%>*</em><%else%><b><%=v%></b><%end%>
+              </div>
+            </div>
+            <% end %>
+          </div>
+          <%if value[:assignation_pending].size > 0%>
+            <div class="all-space all-border-dashed"><strong><%=value[:assignation_pending].size%></strong> pendiente de asignar</div>
+          <%end%>
+        <% end %>
       <% end %>
+      <div class="guiblock smaller_txt">
+        <ul>
+          <li>En gris aparece el stock que no es asignable (tanto interno como externo).</li>
+          <li>Con asterisco aparecen los coches "preasignados" por el sistema</li>
+        </ul>
+      </div>
     <% end %>
 
     <h3 class="highlight_block">Pendientes de asignar</h3>
+    <% if (@detail.select {|k,v| !v[:assignation_pending].empty?}).size == 0%>
+      <div class="guiblock smaller_txt">
+        <ul>
+          <li>No hay reservas con recursos pendientes de asignar</li>
+        </ul>
+      </div>
+    <% end %>
     <% @detail.each do |key, value| %>
       <% unless @detail[key][:assignation_pending].empty? %>
         <h4 class="bottom-border-solid"><%=key%></h4>
